--- a/custom/plugins/LoginVulnerabilities/composer.json
+++ b/custom/plugins/LoginVulnerabilities/composer.json
@@ -1,7 +1,18 @@
 {
-  "name": "swag/plugin-skeleton",
-  "description": "Skeleton plugin",
+  "name": "inf_sec/vulnerabilities_in_login",
+  "description": "Vulnerabilities in login page",
   "type": "shopware-platform-plugin",
+  "authors": [
+    {
+      "name": "Emmanuel Scopelliti",
+      "homepage": "https://github.com/EmmanuelScopelliti"
+    },
+    {
+      "name": "Daniel Fischnaller",
+      "homepage": "https://github.com/fischi20"
+    }
+  ],
+  "version": "1.0.0",
   "license": "MIT",
   "autoload": {
     "psr-4": {
@@ -11,8 +22,8 @@
   "extra": {
     "shopware-plugin-class": "LoginVulnerabilities\\LoginVulnerabilities",
     "label": {
-      "de-DE": "Skeleton plugin",
-      "en-GB": "Skeleton plugin"
+      "de-DE": "Login Vuln",
+      "en-GB": "Login Vuln"
     }
   }
 }
